# SynthEdge

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.claude/skills/analytics/: SKILL.md
.claude/skills/api-design/: SKILL.md
.claude/skills/database/: SKILL.md
.claude/skills/design-system/: SKILL.md
.claude/skills/hackathon-speed/: SKILL.md
.claude/skills/hyperliquid/: SKILL.md
.claude/skills/infastructure/: SKILL.md
.claude/skills/open-source/: SKILL.md
.claude/skills/realtime/: SKILL.md
backend/: Dockerfile  init.sql  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/core/: derivations.py
backend/app/routers/: analytics.py  earnings.py  insights.py  portfolio.py  synth.py  trading.py
backend/app/services/: hl_service.py  synth_service.py
backend/mock_data/: AAPL_1h.json  AAPL_24h.json  BTC_1h.json  BTC_24h.json  ETH_1h.json  ETH_24h.json  GOOGL_1h.json  GOOGL_24h.json  NVDA_1h.json  NVDA_24h.json  SOL_1h.json  SOL_24h.json  SPY_1h.json  SPY_24h.json  TSLA_1h.json  TSLA_24h.json  XAU_1h.json  XAU_24h.json
backend/tests/: conftest.py  test_api.py  test_derivations.py
docs/: API_FEWER_CALLS.md  DEPLOY.md  HACKATHON_INFO.md  README.md  RESEARCH.md  SELECTION_CRITERIA.md  SUBMISSION_REQUIREMENTS.md  TECHNICAL_EXPLANATION.html  TECHNICAL_EXPLANATION.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts
nginx/: synthedge.conf
scripts/: deploy.sh  server-setup.sh  ssl-setup.sh
(+44 files in other folders)
